chore: adiciona dotenv e corrige script de inicialização

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node src/server.js"
   },
   "author": "João Vítor de Souza Coura",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "13.4"
   },
