chore: instala o jest

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "0.1.0",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
+    "start": "node src/app.js"
   },
   "author": "João Vítor de Souza Coura",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "express-validator": "^7.2.1",
     "firebase-admin": "13.4"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
