--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-openid-connect": "^2.18.1",
     "express-validator": "^7.2.1",
     "firebase-admin": "13.4"
   },
